# BASF_Case_Study_Backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml
BASF_Book_Recommendation_System.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: main.py
app/api/: deps.py
app/api/api_v1/: router.py
app/api/api_v1/endpoints/: auth.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  book.py  review.py
app/core/: config.py  logging.py  security.py
app/data/: books_seed.json
app/db/: session.py
app/models/: book.py  review.py  user.py
app/repositories/: book_repo.py  review_repo.py  user_repo.py
app/schemas/: auth.py  book.py  review.py
app/services/: auth_service.py  book_service.py  review_service.py
celery_app/: __init__.py  task.py
src/BASF_Book_Recommendation_System.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: celery_app.py  main.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: book.py  (+1 more)
src/app/clients/: google_book_clients.py
src/app/core/: config.py  logging.py  security.py
src/app/data/: users_seed.json
src/app/db/: session.py
src/app/models/: book.py  review.py
src/app/repositories/: book_repo.py  review_repo.py  user_repo.py
src/app/schemas/: review.py
src/app/services/: auth_service.py  book_service.py  review_service.py
src/app/task/: books.py
tests/: conftest.py
tests/services/: test_auth_service.py  test_book_service.py  test_google_books_client.py  test_review_average  test_review_service.py
