[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BASF-Book-Recommendation-System"
version = "0.1.0"
description = "Book Recommendation System for BASF"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "SQLAlchemy",
    "aiosqlite",
    "python-jose",
    "passlib",
    "bcrypt",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
    "celery",
    "redis", 
    "asyncpg"
]